--- a/.htaccess
+++ b/.htaccess
@@ -1,22 +1,22 @@
 Options -Indexes
 
-ErrorDocument 400 /error/view/400
-ErrorDocument 401 /error/view/401
-ErrorDocument 403 /error/view/403
-ErrorDocument 404 /error/view/404
-ErrorDocument 405 /error/view/405
-ErrorDocument 408 /error/view/408
-ErrorDocument 410 /error/view/410
-ErrorDocument 411 /error/view/411
-ErrorDocument 412 /error/view/412
-ErrorDocument 413 /error/view/413
-ErrorDocument 414 /error/view/414
-ErrorDocument 415 /error/view/415
-ErrorDocument 417 /error/view/417
-ErrorDocument 500 /error/view/500
-ErrorDocument 501 /error/view/501
-ErrorDocument 502 /error/view/502
-ErrorDocument 503 /error/view/503
+ErrorDocument 400 /error/400
+ErrorDocument 401 /error/401
+ErrorDocument 403 /error/403
+ErrorDocument 404 /error/404
+ErrorDocument 405 /error/405
+ErrorDocument 408 /error/408
+ErrorDocument 410 /error/410
+ErrorDocument 411 /error/411
+ErrorDocument 412 /error/412
+ErrorDocument 413 /error/413
+ErrorDocument 414 /error/414
+ErrorDocument 415 /error/415
+ErrorDocument 417 /error/417
+ErrorDocument 500 /error/500
+ErrorDocument 501 /error/501
+ErrorDocument 502 /error/502
+ErrorDocument 503 /error/503
 
 # These headers are recommended for security reasons.  If you set them in
 # Apache, then you should set them to null in config/config.php. -- cwells
@@ -66,8 +66,16 @@ RewriteRule ^(.+)$ public/$1 [QSA,L]
 # Uncomment to enable maintenance mode:
 #RewriteRule ^.*$ /application/main.php?controller=site&method=maintenance [QSA,L]
 
-# All other URLs:
 # If there is only one "directory" in the URL path, use it as the controller name and call its default method.
-RewriteRule ^([^/]*)/?$ /application/main.php?controller=$1&method=index [QSA,L]
+RewriteRule ^([^/]+)$ /application/main.php?controller=$1&method=index [QSA,L]
+
+# If a DatabaseRecordController method other than "view" is provided, use it for the method:
+RewriteRule ^(roles|users)/(add|admin|delete|edit|page|save)(/(.+))?$ /application/main.php?controller=$1&method=$2&parameter=$4 [QSA,L]
+
+# For each DatabaseRecordController with extra methods, set the method to "view" if none of those methods are provided:
+
+# Call the "view" method for any other DatabaseRecordController, ErrorController, or FileController URL.
+RewriteRule ^(roles|users|error)/(.+)$ /application/main.php?controller=$1&method=view&parameter=$2 [QSA,L]
+
 # Interpret more than one "directory" in the URL path as /<controller>/<method>/<parameter>
-RewriteRule ^([^/]*)/([^/]*)(/(.*))?$ /application/main.php?controller=$1&method=$2&parameter=$4 [QSA,L]
+RewriteRule ^([^/]+)/([^/]+)(/(.+))?$ /application/main.php?controller=$1&method=$2&parameter=$4 [QSA,L]
